@@ -8,6 +8,8 @@ Release 0.9.2
 * cosmetic changes in the sanity plots (clusters)
 * better handling of overlapping chunks while filtering, removing filtering artefacts
 * templates are restricted within shanks
+* optimization of the amplitudes once all templates have been found
+* export of a purity value, for phy, to assess how good a cluster is (between 0 and 1)
 
 =============
 Release 0.9.1
